--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(MogNetwork)
 
 set(CMAKE_BUILD_TYPE Release)
 
-set(CMAKE_CXX_FLAGS "-g3 -W -Wall -pedantic -ansi")
+set(CMAKE_CXX_FLAGS "-g3 -W -Wall -pedantic -ansi -fPIC")
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
