--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ compiler:
   - g++
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq g++
+  - sudo apt-get install -qq g++ cmake
 script: mkdir build && cd build && cmake .. && make
